feat: paginated videos endpoint
