# backend/main.go
@@ -52,6 +52,9 @@ func main() {
 	// users.PUT("/:id", middlewares.AuthMiddleware, middlewares.AdminMiddleware, routes.UserUpdateHandler)
 	users.DELETE("/:id", middlewares.AuthMiddleware, middlewares.AdminMiddleware, routes.UserDeleteHandler)
 
+	videos := router.Group("/videos")
+	videos.GET("", routes.VideosPaginatedHandler)
+
 	router.GET("/health", routes.HealthHandler)
 	router.GET("/ping", routes.PingHandler)
 	router.GET("/ping/auth", middlewares.AuthMiddleware, routes.PingHandler)
